# auto-spinal-cord-lesion-seg

./: .gitignore  README.md  demo.ipynb  requirements.txt  setup.py
inference/: README.md
inference/src/: constant.py  schema.py
src/: cli.py
src/analyzer/: image_classifier.py  image_processor.py  lesion_segmenter.py
src/model/: EfficientViT.py  STAMPUnet.py  UNET.py
src/utils/: inference_dataset.py
training/: README.md  _directory_colab.yaml
training/dataset/: cervical_spine_sequence_s1_1_224.yaml  cervical_spine_sequence_s2_1_224.yaml  cervical_spine_sequence_s3_1_224.yaml  foundation_radimagenet_s1_0_01_224.yaml  foundation_radimagenet_s1_1_224.yaml  foundation_radimagenet_s2_1_224.yaml  foundation_radimagenet_s3_1_224.yaml  foundation_radimagenet_s4_0_01_224.yaml  foundation_radimagenet_s4_1_224.yaml  lesion_segmentation_s1_1_320.yaml  lesion_segmentation_s2_1_320.yaml  lesion_segmentation_s3_1_320.yaml  lesion_segmentation_s4_1_320.yaml  lesion_segmentation_s5_1_320.yaml  lesion_segmentation_s6_1_320.yaml  lesion_segmentation_s7_1_320.yaml  (+21 more)
training/ml_framework/: README.md  pyproject.toml  requirements.txt
training/ml_framework/ml_framework/: main.py
training/ml_framework/ml_framework/base/: callback.py  loader.py  logger.py  metric.py  model.py  process.py  schema.py  trainer.py
training/ml_framework/ml_framework/command/: train.py
training/ml_framework/ml_framework/constants/: app.py
training/ml_framework/ml_framework/custom/: ms_lesion_augmentor.py
training/ml_framework/ml_framework/utils/: image_process.py  logger.py
(+112 files in other folders)
