[project]
name = "ml-framework"
version = "0.0.5"
description = "Machine Learning Framework like laravel in machine learning worlds."
authors = [{ name = "David Cahyadi", email = "liu.david.chd@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "click>=8.1.7,<9.0.0",
    "pydantic>=2.6.1,<3.0.0",
    "lightning>=2.2.0,<3.0.0",
    "albumentations>=1.4.0,<2.0.0",
    "psutil>=5.9.8,<6.0.0",
    "pynvml>=11.5.0,<12.0.0",
    "wandb>=0.17.3,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    # "torch @ https://download.pytorch.org/whl/cu121/torch-2.4.0%2Bcu121-cp310-cp310-linux_x86_64.whl",
    # "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.19.0%2Bcu121-cp310-cp310-linux_x86_64.whl",
    # "mlflow>=2.16.0,<3.0.0",
    "timm>=1.0.9,<2.0.0",
    "numpy==1.26.4"
]

[project.scripts]
ml_framework = "ml_framework.main:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["ml_framework"]

[tool.hatch.build.targets.wheel]
include = ["ml_framework"]

# Optional: Custom source for torch (commented out as in original)
# [tool.hatch.envs.default]
# pip-extra-index-urls = ["https://download.pytorch.org/whl/cu121"]